interim commit while verifying adjustment to image ssh configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .terraform/
 .terraform.lock.hcl
+.terraform.tfstate.lock.info
 terraform.tfvars
 terraform.tfstate
+terraform.tfstate.backup
+*.tar
+*.vdi
+*.vdi.gz
+id_rsa
